--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -17,9 +17,9 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th><%= link_to "Movie Title", movies_path(:sort_by => "title", :ratings => Hash[@ratings_to_show.collect { |v| [v, 1] }]), class: "hilite" + @title_class %></th>
+      <th><%= link_to "Movie Title", movies_path(:sort_by => "title", :ratings => Hash[@ratings_to_show.collect { |v| [v, 1] }]), class: "hilite" + @title_class, id: 'title_header'%></th>
       <th>Rating</th>
-      <th><%= link_to "Release Date", movies_path(:sort_by => "release_date", :ratings => Hash[@ratings_to_show.collect { |v| [v, 1] }]), class: "hilite" + @release_class %></th>
+      <th><%= link_to "Release Date", movies_path(:sort_by => "release_date", :ratings => Hash[@ratings_to_show.collect { |v| [v, 1] }]), class: "hilite" + @release_class, id: 'release_date_header'%></th>
       <th>More Info</th>
     </tr>
   </thead>
